# vertex-ai-creative-studio

./: runevaluation.md
KevinSideWork/Documentation_for_Projects/: ArizeTracingExpansion.md  KevChangesToRepo.md  agenttooldescript.md  arizeadk.md  arizemcp.md  currentstatus.md  example agent geneartion dialogue.png~RF27980d1.TMP  google-nano-banana.py  howtorun.md  lessonslearned.md  model-configuration-exhibit.md  runEvaluation.md  runevaluation.md
experiments/mcp-genmedia/mcp-genmedia-go/: otel.go
experiments/mcp-genmedia/mcp-genmedia-go/mcp-avtool-go/: avtool.go  go.mod  go.sum
experiments/mcp-genmedia/mcp-genmedia-go/mcp-chirp3-go/: chirp3.go  go.mod  go.sum
experiments/mcp-genmedia/mcp-genmedia-go/mcp-common/: config.go  models.go
experiments/mcp-genmedia/mcp-genmedia-go/mcp-gemini-go/: go.mod  go.sum  main.go  otel.go
experiments/mcp-genmedia/mcp-genmedia-go/mcp-imagen-go/: go.mod  go.sum  imagen.go
experiments/mcp-genmedia/mcp-genmedia-go/mcp-lyria-go/: go.mod  go.sum  lyria.go
experiments/mcp-genmedia/mcp-genmedia-go/mcp-veo-go/: go.mod  otel.go  veo.go
experiments/mcp-genmedia/sample-agents/adk/: .gitignore  export_env.sh  pyproject.toml  start_adk.sh
experiments/mcp-genmedia/sample-agents/adk/genmedia_agent/: .env.bak.1756873014  .env.bak.1756873664  .env.bak.1756877001  agent.py
experiments/mcp-genmedia/sample-agents/geminicli/sample_extensions/google-genmedia/: gemini-extension.json
