[project]
name = "adk-genmedia-agent"
version = "0.1.0"
description = "ADK Agent that uses Genmedia MCP tools"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-otel>=0.10.0",
    "dotenv>=0.9.9",
    "google-adk>=0.3.0",
    "openinference-instrumentation-google-adk>=0.1.3",
    "openinference-instrumentation-mcp>=1.3.0",
]
